src/ApiGateways/Envoy/config/streamteam-web/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
                config:
                  codec_type: auto
                    stat_prefix: ingress_http
                    route_config:
                      name: sts_backend_route
                      virtual_hosts:
                        - name: sts_backend
                          domains:
                            - "*"
                            routes:
